--- a/style.css
+++ b/style.css
@@ -1,23 +1,28 @@
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .navlogo_wrapper {
-  width: calc(100% / 8);
-  position: relative;
+  display: flex;
+  align-items: center;
 }
-
 .nav_logo {
-  position: absolute;
+  width: 100%;
+  max-width: 200px;
 }
 
 nav {
   width: 100%;
-  height: calc(100%/10);
+  height: 5vw;
   background-color: aqua;
   display: flex;
   justify-content: space-between;
-  padding: 24px;
+  padding: 0 24px;
 }
 
 .navmenu_wrapper {
@@ -32,34 +37,192 @@ nav {
 
 header {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 5vw);
   display: flex;
   background-color: rgb(228, 205, 237);
-  align-items: center;
+  
+  padding: 200px 24px;
 }
 .header_container {
   width: 100%;
-  height: 20vw;
-  
+  height: 50vw;
   display: flex;
 }
 
 .header_content {
   width: 50%;
-  
+  height: 30vw;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+
+}
+
+h1 {
+  font-size: 72px;
 }
 
 .header_content-button {
-  width: 200px;
+  width: 20vw;
   background-color: rgb(44, 156, 120);
   color: aliceblue;
-  
+  border: none;
+  padding: 8px 16px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
 }
 
 .header_image {
   width: 50%;
   
+}
+
+.header_laptop-image {
+  height: 30vw;
+}
+
+#about,
+#discord,
+#contact {
+  width: 100%;
+  height: 50vh;
+  padding: 0 24px;
+}
+
+#about {
+  background-color: antiquewhite;
+}
+
+h2 {
+  font-size: 60px;
+  text-align: center;
+}
+
+.section__description {
+  display: flex;
+}
+
+.section__description-wrapper {
+  width: 70%;
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.section__description-para {
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+.about__img-wrapper {
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about__img {
+  max-height: 30vh;
+}
+
+#discord {
+  background-color: aquamarine;
+}
+
+#contact {
+  background-color: rgb(190, 190, 240);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.contact_form {
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.contact__form-button {
+  background-color: rgb(44, 156, 120);
+  color: aliceblue;
+  border: none;
+  padding: 8px 16px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+input,
+textarea {
+  margin-bottom: 24px;
+  font-size: 20px;
+  padding: 12px;
+}
+
+footer {
+  width: 100%;
+  height: 20vh;
+  background-color: antiquewhite;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer_logo {
+  width: 30%;
+}
+
+.footer_menu {
+  margin: 12px 0;
+}
+
+.footer_link {
+  padding: 0 16px;
+  font-weight: 50;
+  color: black;
+  font-size: 24px;
+}
+
+span {
+  font-size: 30px;
+}
+
+/* SMALL PHONES, TABLETS, LARGE SMARTPHONES */
+@media (max-width: 728px) {
+  .row{
+    flex-direction: column;
+  }
+
+  .header_content{
+    width:100%;
+    font-size: 36px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+  }
+
+  .header_image{
+    width:100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  h1{
+    font-size: 26px;
+  }
+
+  h3{
+    font-size: 16px;
+  }
+
+  .header_content-button{
+    width : 200px;
+    text-align: center;
+  }
+
 }
